refactor(order): enrich order status responses and mapper structure
* ORDER ENUM:
  - `OrderStatus.java`: Add object-shaped JSON output, rich status metadata, and strict JSON creator parsing.
Hide internal next-state method from JSON to avoid recursive enum serialization.

* ORDER RESPONSE:
  - `OrderResponse.java`: Add allowed next action objects while keeping existing action codes for compatibility.

* ORDER MAPPER:
  - `OrderMapper.java`: Split order, item, history, and action mapping into focused helper methods.

* ORDER DOMAIN:
  - `Order.java`: Add user-status-created index and clean domain validation messages.
  - `OrderItem.java`: Clean item validation messages and keep order-variant constraint.
  - `OrderHistory.java`: Clean history validation messages.

* ORDER REQUEST:
  - `OrderRequest.java`: Clean request validation messages.
  - `OrderItemRequest.java`: Clean item request validation messages.
  - `UpdateShippingRequest.java`: Clean shipping request validation messages.