@@ -7,12 +7,13 @@ import com.example.new_toy_store.order.application.dto.response.OrderResponse;
 import com.example.new_toy_store.order.domain.Order;
 import com.example.new_toy_store.order.domain.OrderHistory;
 import com.example.new_toy_store.order.domain.OrderItem;
+import com.example.new_toy_store.order.domain.OrderStatus;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class OrderMapper {
+public final class OrderMapper {
+
+    private OrderMapper() {}
 
     public static Order toEntity(OrderRequest request) {
         if (request == null) return null;
@@ -23,6 +24,15 @@ public class OrderMapper {
         if (order == null) return null;
 
         OrderResponse response = new OrderResponse();
+        mapOrderFields(order, response);
+        response.setItems(toItemResponses(order));
+        response.setHistories(toHistoryResponses(order));
+        response.setAvailableActions(toAvailableActionCodes(order.getStatus()));
+        response.setAllowedNextActions(toAllowedNextActions(order.getStatus()));
+        return response;
+    }
+
+    private static void mapOrderFields(Order order, OrderResponse response) {
         response.setId(order.getId());
         response.setUserId(order.getUserId());
         response.setStatus(order.getStatus());
@@ -32,34 +42,44 @@ public class OrderMapper {
         response.setDiscountAmount(order.getDiscountAmount());
         response.setCreatedAt(order.getCreatedAt());
         response.setUpdatedAt(order.getUpdatedAt());
+    }
 
-        if (order.getItems() != null) {
-            response.setItems(order.getItems().stream()
-                    .map(OrderMapper::toItemResponse)
-                    .collect(Collectors.toList()));
-        } else {
-            response.setItems(Collections.emptyList());
+    private static List<OrderItemResponse> toItemResponses(Order order) {
+        if (order.getItems() == null || order.getItems().isEmpty()) {
+            return List.of();
         }
 
-        if (order.getHistories() != null) {
-            response.setHistories(order.getHistories().stream()
-                    .map(OrderMapper::toHistoryResponse)
-                    .collect(Collectors.toList()));
-        } else {
-            response.setHistories(Collections.emptyList());
-        }
-        if (order.getStatus() != null) {
-            List<String> actions = order.getStatus().getNextValidStates().stream()
-                    .map(Enum::name)
-                    .collect(Collectors.toList());
-            response.setAvailableActions(actions);
+        return order.getItems().stream()
+                .map(OrderMapper::toItemResponse)
+                .toList();
+    }
+
+    private static List<OrderHistoryResponse> toHistoryResponses(Order order) {
+        if (order.getHistories() == null || order.getHistories().isEmpty()) {
+            return List.of();
         }
 
-        return response;
+        return order.getHistories().stream()
+                .map(OrderMapper::toHistoryResponse)
+                .toList();
+    }
+
+    private static List<String> toAvailableActionCodes(OrderStatus status) {
+        return toAllowedNextActions(status).stream()
+                .map(OrderStatus::name)
+                .toList();
+    }
+
+    private static List<OrderStatus> toAllowedNextActions(OrderStatus status) {
+        if (status == null) {
+            return List.of();
+        }
+        return status.getNextValidStates();
     }
 
     private static OrderItemResponse toItemResponse(OrderItem item) {
         if (item == null) return null;
+
         OrderItemResponse response = new OrderItemResponse();
         response.setId(item.getId());
         response.setProductId(item.getProductId());
@@ -73,6 +93,7 @@ public class OrderMapper {
 
     private static OrderHistoryResponse toHistoryResponse(OrderHistory history) {
         if (history == null) return null;
+
         OrderHistoryResponse response = new OrderHistoryResponse();
         response.setId(history.getId());
         response.setStatus(history.getStatus());
